objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CIN_GuideWireId__c</fullName>
        <label>GuideWire Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DraftCreationDate__c</fullName>
        <label>Quote Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ITOrg__c</fullName>
        <label>IT Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ITOrg</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PolicyEffectiveDate__c</fullName>
        <label>Effective date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PolicyIssueDate__c</fullName>
        <label>Date Issued</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PolicyNumber__c</fullName>
        <label>Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PolicyPackages__c</fullName>
        <label>Packages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>tiers1</fullName>
                    <label>tiers 1</label>
                </value>
                <value>
                    <fullName>tiers2</fullName>
                    <label>tiers 2</label>
                </value>
                <value>
                    <fullName>tous_risques1</fullName>
                    <label>Tous Risques 1</label>
                </value>
                <value>
                    <fullName>tous_risques2</fullName>
                    <label>Tous Risques 2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SellerId__c</fullName>
        <label>Seller ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>CIN_Opportunity_record_type</fullName>
        <active>true</active>
        <businessProcess>CIN Sales Process</businessProcess>
        <label>CIN Opportunity record type</label>
    </recordTypes>
</CustomObject>